package edu.fiuba.algo3.modelo;

public class NotUnitCardError extends RuntimeException{
    public NotUnitCardError(String message){
        super(message);
    }
}
