package edu.fiuba.algo3.models.errors;

public class GwentFileInvalid extends RuntimeException{
    public GwentFileInvalid(String message){
        super(message);
    }
} 