package edu.fiuba.algo3.models.errors;

public class SectionPlayerMismatchError extends RuntimeException{
    public SectionPlayerMismatchError(String mensaje){ super(mensaje); }
}
