package edu.fiuba.algo3.models.errors;

public class SpecialsFileInvalid extends RuntimeException{
    public SpecialsFileInvalid(String message){
        super(message);
    }
} 