package edu.fiuba.algo3.models.errors;

public class UnitsFileInvalid extends RuntimeException{
    public UnitsFileInvalid(String message){
        super(message);
    }
} 